@@ -8,7 +8,7 @@
 #pragma std_c99
 #endif
 
-#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
 long long
 signed_poly (long long sum, long x)
 {
@@ -27,7 +27,7 @@ unsigned_poly (unsigned long long sum, unsigned long x)
 void
 testTortureExecute (void)
 {
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   if (signed_poly (2LL, -3) != -4LL)
     ASSERT (0);
   
