@@ -11,7 +11,7 @@
 #define NULL ((void *) 0)
 
 // Todo: Enable when long long comes to these ports!
-#if !defined(__SDCC_ds390) && !defined(__SDCC_ds400) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08)
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08)
 
 /* extracted from gdb sources */
 
@@ -85,7 +85,7 @@ struct blockvector *blockvector_for_pc_sect(register CORE_ADDR pc,
 void testTortureExecute(void)
 {
 #if !(defined (__SDCC_mcs51) && defined (__SDCC_MODEL_SMALL)) // Not enough memory
-#if !defined(__SDCC_ds390) && !defined(__SDCC_ds400) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // No long long
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) // No long long
   struct block a = { 0, 0x10000, 0, 0, 1, 20 };
   struct block b = { 0x10000, 0x20000, 0, 0, 1, 20 };
   struct blockvector bv = { 2, { &a, &b } };
