@@ -30,11 +30,11 @@ char c = CHAR_VALUE;
 short s = SHORT_VALUE;
 int i = INT_VALUE;
 long l = LONG_VALUE;
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
 long long ll = LL_VALUE;
 #endif
 int shift1 = SHIFT1;
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
 int shift2 = SHIFT2;
 #endif
 
@@ -64,7 +64,7 @@ testTortureExecute (void)
 
   if (ROR (l, SHIFT1) != ROR (LONG_VALUE, SHIFT1))
     ASSERT (0);
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   if (ROR (ll, shift1) != ROR (LL_VALUE, SHIFT1))
     ASSERT (0);
 
