@@ -10,7 +10,7 @@
 
 /* PR target/36362 */
 #if !(defined (__GNUC__) && __GNUC__ < 5)
-#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
 int
 test (float c)
 {
@@ -23,7 +23,7 @@ void
 testTortureExecute (void)
 {
 #if !(defined (__GNUC__) && __GNUC__ < 5)
-#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   if (test (1.0f) != 0)
     ASSERT (0);
 #endif
