@@ -10,7 +10,6 @@
 
 /* PR tree-optimization/65170 */
 
-#ifndef __SDCC_ds390 // Enable when ds390 supports long long
 typedef unsigned long long int V;
 typedef unsigned int H;
 
@@ -24,12 +23,11 @@ foo (V b, V c)
   if (a != 1)
     ASSERT (0);
 }
-#endif
 
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_ds390) && !defined(__SDCC_hc08) && !defined(__SDCC_s08)
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
   foo (1, 1);
   return;
 #endif
